--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,26 @@
-<div class="main">
-    <div class="form-container">
-        <form action="">
-            <div class="title">Login to your account.</div>
-            <div class="field">
-                <p class="label">Email</p>
-                <input type="text">
-            </div>
-            <div class="field">
-                <p class="label">Password</p>
-                <input type="text">
-            </div>
-            <div class="submit-btn">
-                <button>Login</button>
-            </div>
-            <p class="query">Don't have an account yet? 
-                <a routerLink="/register">Register</a>
-            </p>
-        </form>
-        <div class="side-content"></div>
+<div class="form-main-container">
+    <div class="form-widget">
+        <div class="form-widget__col col-right">
+            <header>
+                <p class="title">Login to your account.</p>
+            </header>
+            <form action="">
+                <div class="form-field">
+                    <p class="form-field__label">Email</p>
+                    <input class="form-field__input" type="text">
+                </div>
+                <div class="form-field">
+                    <p class="form-field__label">Password</p>
+                    <input class="form-field__input" type="text">
+                </div>
+                <button class="form-submit-btn">Login</button>
+            </form>
+            <footer>
+                <p class="query">Don't have an account yet? 
+                    <a routerLink="/register">Register</a>
+                </p>
+            </footer>
+        </div>
+        <div class="form-widget__col col-image"></div>
     </div>
 </div>
