--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,28 +5,41 @@
             <header>
                 <p class="title">Create an account.</p>
             </header>
-            <form>
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="form-field form-name">
                     <div class="form-name-first">
                         <p class="form-field__label">First Name</p>
-                        <input class="form-field__input" type="text">
+                        <input class="form-field__input" 
+                            type="text"
+                            formControlName="firstName"
+                            placeholder="Jane">
                     </div>
                     <div class="form-name-last">
                         <p class="form-field__label">Last Name</p>
-                        <input class="form-field__input" type="text">
+                        <input class="form-field__input" 
+                            type="text"
+                            formControlName="lastName"
+                            placeholder="Doe">
                     </div>
                 </div>
                 <div class="form-field">
                     <p class="form-field__label">Email</p>
-                    <input class="form-field__input" type="text">
+                    <input class="form-field__input" 
+                        type="email"
+                        formControlName="email"
+                        placeholder="janedoe@maill.com">
                 </div>
                 <div class="form-field">
                     <p class="form-field__label">Password</p>
-                    <input class="form-field__input" type="text">
+                    <input class="form-field__input" 
+                        type="password"
+                        formControlName="password">
                 </div>
                 <div class="form-field">
                     <p class="form-field__label">Confirm Password</p>
-                    <input class="form-field__input" type="text">
+                    <input class="form-field__input" 
+                        type="password"
+                        formControlName="confirmPassword">
                 </div>
                 <button class="form-submit-btn">Register</button>
             </form>
