--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -12,14 +12,16 @@
                         <input class="form-field__input" 
                             type="text"
                             formControlName="firstName"
-                            placeholder="Jane">
+                            placeholder="Jane"
+                            [class.form-field__input--error]="form.get('firstName')?.hasError('required') && submitClicked">
                     </div>
                     <div class="form-name-last">
                         <p class="form-field__label">Last Name</p>
                         <input class="form-field__input" 
                             type="text"
                             formControlName="lastName"
-                            placeholder="Doe">
+                            placeholder="Doe"
+                            [class.form-field__input--error]="form.get('lastName')?.hasError('required') && submitClicked">
                     </div>
                 </div>
                 <div class="form-field">
@@ -27,19 +29,24 @@
                     <input class="form-field__input" 
                         type="email"
                         formControlName="email"
-                        placeholder="janedoe@maill.com">
+                        placeholder="janedoe@maill.com"
+                        [class.form-field__input--error]="form.get('email')?.hasError('required') && submitClicked">
                 </div>
                 <div class="form-field">
                     <p class="form-field__label">Password</p>
                     <input class="form-field__input" 
                         type="password"
-                        formControlName="password">
+                        formControlName="password"
+                        placeholder="**********"
+                        [class.form-field__input--error]="form.get('password')?.hasError('required') && submitClicked">
                 </div>
                 <div class="form-field">
                     <p class="form-field__label">Confirm Password</p>
                     <input class="form-field__input" 
                         type="password"
-                        formControlName="confirmPassword">
+                        formControlName="confirmPassword"
+                        placeholder="**********"
+                        [class.form-field__input--error]="form.get('confirmPassword')?.hasError('required') && submitClicked">
                 </div>
                 <button class="form-submit-btn">Register</button>
             </form>
