--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,8 +61,12 @@
         width: 100%;
         padding: 8px 14px;
         border-radius: 14px;
-        border: 1px solid;
+        border: 1px solid rgb(112, 112, 112);
         background-color: transparent;
+
+        &--error {
+            border: 1.8px solid red;
+        }
     }
 }
 
