Customize components' selector

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="main-side-bar" *ngIf="isLoggedIn">
-        <app-side-bar [paths]="paths" [user]="user"></app-side-bar>
+        <bt-side-bar [paths]="paths" [user]="user"></bt-side-bar>
     </div>
     <div class="main-content" [style.width.vw]="mainContentWidth">
         <router-outlet></router-outlet>
