--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
                 <button class="form-submit-btn">Login</button>
             </form>
             <footer>
-                <p class="query">Don't have an account yet? 
+                <p class="form-query">Don't have an account yet? 
                     <a routerLink="/register">Register</a>
                 </p>
             </footer>
