--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,13 @@
-<p>categories works!</p>
+<div class="container">
+    <div class="header">
+        <button class="header__button">Add New Category</button>
+        <div class="header__search-input">
+            <input type="text" placeholder="Search...">
+        </div>
+    </div>
+    <div class="contents">
+        <div class="card-container" *ngFor="let item of categoryList">
+            <bt-card [item]="item"></bt-card>
+        </div>
+    </div>
+</div>
