--- a/src/app/categories/categories.component.scss
+++ b/src/app/categories/categories.component.scss
@@ -1,12 +1,29 @@
 .header {
-    height: 15vh;
+    height: 80px;
+    display: flex;
+    padding-left: 40px;
+    align-items: center;
+
+    &__button {
+        height: 30px;
+        padding: 0 10px;
+    }
+
+    &__search {
+        margin-left: 10px;
+
+        input {
+            height: 30px;
+            padding: 0 10px;
+        }
+    }
 }
 
 .contents {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    height: calc(100vh - 15vh);
+    height: calc(100vh - 80px);
     overflow: auto;
     padding: 10px 40px;
 }
