--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -2,7 +2,7 @@
     width: 200px;
     height: 150px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px 20px;
 
     &-green {
         box-shadow: 0 0 3px green;
