--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,10 +21,13 @@
                         placeholder="**********"
                         [class.form-field__input--error]="form.get('password')?.hasError('required') && submitClicked">
                 </div>
+                <div class="forgot-pass">
+                    <a href="">Forgot password?</a>
+                </div>
                 <button class="form-submit-btn">Login</button>
             </form>
             <footer>
-                <p class="form-query">Don't have an account yet? 
+                <p class="form-query">Don't have an account? 
                     <a routerLink="/register">Register</a>
                 </p>
             </footer>
