--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,3 +2,12 @@
     background: -webkit-linear-gradient(to left, #86fde8, #acb6e5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #86fde8, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.forgot-pass {
+    margin: 15px 0;
+
+    & > a {
+        font-size: 0.8rem;
+        text-decoration: none;
+    }
+}
