--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -1,1 +1,19 @@
-<p>records works!</p>
+<div class="container">
+    <div class="header">
+        <button class="header__button" (click)="addNewRecord()">
+            Add New Record
+        </button>
+        <div class="header__search">
+            <input type="text" placeholder="Search...">
+        </div>
+    </div>
+    <div class="contents">
+        <div class="card-container" *ngFor="let item of recordList">
+            <bt-card [record]="item"></bt-card>
+        </div>
+    </div>
+    <bt-modal-form *ngIf="openModal" 
+        [headerTitle]="headerTitle" 
+        (closeModal)="closeModal()">
+    </bt-modal-form>
+</div>
