--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,12 +1,12 @@
 <div class="card"
-    [ngClass]="[item?.type === 'income' ? 'card-green' : 'card-red']">
+    [ngClass]="[category?.type === 'income' ? 'card-green' : 'card-red']">
     <header class="card__header"></header>
     <div class="card__body">
-        <i [class]="item?.icon"></i>
-        <p> {{ item?.name }} </p>
+        <i [class]="category?.icon"></i>
+        <p> {{ category?.name }} </p>
     </div>
     <footer class="card__footer">
-        <button [disabled]="item?.isPredefined">
+        <button [disabled]="category?.isPredefined">
             <i class="bi bi-pencil"></i>
         </button>
     </footer>
