--- a/src/app/shared/components/modal-form/modal-form.component.scss
+++ b/src/app/shared/components/modal-form/modal-form.component.scss
@@ -16,15 +16,28 @@
     height: 300px;
     background-color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 20px 50px;
 
-    form {
-        margin-top: 20px;
+    &__header {
+        height: 15%;
+
+        p {
+            font-size: 1.5rem;
+        }
     }
 
-    footer {
-        position: relative;
-        bottom: 0;
+    &__form {
+        height: 65%;
+    }
+
+    &__footer {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+
+        button {
+            padding: 5px 10px;
+        }
     }
 }
 
